--- a/home.css
+++ b/home.css
@@ -3,20 +3,21 @@
     padding: 0;
 }
 
-/* h1{
-    font-family: "Ink Free";
-} */
-
+/* --------------------- About Section ------------------------------*/
 .first-header{
-    background-color: #d5d5d5;
+    background-color: #adaaab;
     width: 100%;
 }
 
-.inner-header,.conteudo,.footer{
+.inner-header,.conteudo,.footer,.cardpart{
     margin: 0 auto;
     width: 80%;
     display: flex;
     justify-content: center;
+}
+
+.inner-header a{
+    margin:2px 10px;
 }
 
 .about-section{
@@ -34,6 +35,16 @@
     flex-grow: 2;
 }
 
+
+.hireme-bttn{
+    color: #ffedec;
+    padding: 10px 36px 10px 36px;
+    background-color: #ff4d5a;
+    border: 1px solid #a68989;
+    border-radius: 10px;
+    width:25%;
+}
+
 .text-part span, .ex-line{
 display: block;
 width: 88px;
@@ -42,6 +53,30 @@ border-radius: 10px;
 background: #ff4d5a;
 margin-bottom: 10px;
 }
+
+#experience-bttn ,#experience-bttn1{
+    margin-top: 10px;
+    color: #ffedec;
+    padding: 10px 36px 10px 36px;
+    background-color: #ff4d5a;
+    border: 1px solid #a68989;
+    border-radius: 10px;
+}
+
+#show-details , #show-details1{
+    margin-top: 5px;
+    display: none;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #adaaab;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#show-details p,#show-details1 p, #show-details1 h3{
+    text-align: center;
+}
+
 
 .text-part span:last-child {
     margin-left: 50px;
@@ -53,9 +88,7 @@ margin-bottom: 10px;
     line-height: 1;
     letter-spacing: 1.6px;
     margin-bottom: 16px;
-    /* font-family: "futura_m"; */
     font-weight: normal;
-    /* text-shadow: 0 10px 30px rgb(2 11 22 / 50%); */
 }
 
 .zm-photo{
@@ -66,10 +99,16 @@ margin-bottom: 10px;
 .user-icon{
     width: 20px;
     padding: 8px;
+    border: 1px solid #000000;
 }
 
-.inner-header a{
-    margin:2px 10px;
+.user-icon:hover {
+    background-color: #a68989;
+    width: 25px;
+}
+
+.welcome-title{
+    font-family: "Brush Script MT";
 }
 
 .start{
@@ -80,26 +119,34 @@ margin-bottom: 10px;
 }
 
 .name{
+    margin-top: 10px;
     font-size: 50px;
 }
 
-/* ====================================== */
+.profesion{
+    font-size: 20px;
+}
+
+.introduction{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: "Roboto", Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
 
 .conteudo {
-
-    margin-top: 50px;
+    padding-top: 60px;
     display: inline-flex;
     display: flex;
     justify-content: center;
-    border-bottom: 4px solid #EFEFEF;
+    border-bottom: 4px solid red;
     border-radius: 5px;
 }
 
 .conteudo img {
     width: 10%;
-    /* filter: drop-shadow(0px 0px 1px #4b4b50); */
     animation: flutuar 3s linear infinite;
-    /* margin: %; */
 }
 
 @keyframes flutuar {
@@ -130,21 +177,18 @@ margin-bottom: 10px;
     animation-delay: .8s;
 }
 
+/*  ---------------------------- Experiences-section -----------------------------*/
 
 .experiences-section{
-    /* margin-top: 100px !important; */
     margin: 0 auto;
     width: 80%;
     height: 100vh;
-    /* display: flex;
-    justify-content: center; */
     display: flex;
     flex-direction: row;
 }
 
 .experiences,.companies-name{
     width: 50%;
-    /* height: 100vh; */
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -154,6 +198,8 @@ margin-bottom: 10px;
     display: flex;
     flex-direction: column;
 }
+
+
 
 .c1,.c2{
     height: 50%;
@@ -171,13 +217,102 @@ margin-bottom: 10px;
     align-items: center;
 }
 
-/* .text-wrap{
-    display: grid;
-    place-items:center;
-} */
+/* -------------------------------- Project-section ------------------------------------*/
 
-.thank-text{
-    width: 28ch;
+.container{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    width: 1000px;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+}
+
+.container .card{
+    position: relative;
+    cursor: pointer;
+}
+
+.container .card .face{
+    width: 300px;
+    height: 200px;
+    transition: 0.5s;
+}
+
+.container .card .face.face1{
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.container .card:hover .face.face1{
+    background: #ff0057;
+    transform: translateY(0);
+}
+
+.container .card .face.face1 .content{
+    opacity: 0.2;
+    transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content{
+    opacity: 1;
+}
+
+.container .card .face.face1 .content img{
+    max-width: 100px;
+}
+
+.container .card .face.face1 .content h3{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.container .card .face.face2{
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2{
+    transform: translateY(0);
+}
+
+.container .card .face.face2 .content p{
+    margin: 0;
+    padding: 0;
+}
+
+.container .card .face.face2 .content a{
+    margin: 15px 0 0;
+    display:  inline-block;
+    text-decoration: none;
+    font-weight: 900;
+    color: #333;
+    padding: 5px;
+    border: 1px solid #333;
+}
+
+.container .card .face.face2 .content a:hover{
+    background: #333;
+    color: #fff;
+}
+
+.welcome-title{
+    width: 23ch;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     white-space: nowrap;
     overflow: hidden;
@@ -200,14 +335,71 @@ margin-bottom: 10px;
     
 }
 
+/* ---------------------------------------- Footer-section -------------------------------*/
 
+.footer-basic {
+    padding:40px 0;
+    background-color:#fee3c3;
+    color:#4b4c4d;
+  }
+  
+    
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #4b4c4d;
+    margin:0 8px;
+    color:inherit;
+    opacity:0.75;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity:1;
+  }
 
+  .footer-txt{
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 20px 0;
+  }
+  
 @media (max-width:1200px) {
     
 }
 
 @media (max-width:1000px) {
+    .cardcontainer{
+        display: flex;
+        flex-wrap: wrap;
+    }
 
+    .name {
+        font-size: 30px;
+    }
+
+    .hireme-bttn {
+        width: 60%;
+    }
     
 }
 
@@ -223,7 +415,8 @@ margin-bottom: 10px;
         height: 100vh;
     }
     .about-text {
-        font-size: 35px;
+        margin-top: 40px;
+        font-size: 22px;
     }
 
     .text-part span {
@@ -247,6 +440,32 @@ margin-bottom: 10px;
     .introduction{
         text-align: center;
     }
+
+    .hireme-bttn {
+        width: 100%;
+    }
+
+    .experiences-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+
+    #show-details , #show-details1{
+    width: max-content;
+    }
+
+    #show-details1 h3{
+        text-align: center;
+    }
+
+    .cardcontainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+  
     
     
 }
